Blogs page fixed for dark mode.

--- a/_sass/rootvariables.scss
+++ b/_sass/rootvariables.scss
@@ -38,7 +38,7 @@
     --color-secondary-light:#fff;
     --color-secondary-medium:#f1f3f5;
     --color-secondary-dark:#f1f3f5;
-    --color-grey-light:#adb5bd;
+    --color-grey-light:#ced4da;
 
     --box-shadow-primary:4px 4px 8px rgba(0, 0, 0, 1);
     // --box-shadow-primary:4px 4px 8px rgba(255, 255, 255, 0.4);
